<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_user_avatar"
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:background="@drawable/avatar"
            android:contentDescription="@string/user_avatar" />

        <TextView
            android:id="@+id/text_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textSize="14sp"
            android:text="@string/user_email"
            app:layout_constraintEnd_toEndOf="@+id/image_user_avatar"
            app:layout_constraintStart_toStartOf="@+id/image_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/image_user_avatar" />

        <TextView
            android:id="@+id/text_user_fullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_fullName"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/text_user_email"
            app:layout_constraintStart_toStartOf="@+id/text_user_email"
            app:layout_constraintTop_toBottomOf="@+id/text_user_email" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/text_user_fullName"
            app:layout_constraintStart_toStartOf="@+id/text_user_fullName"
            app:layout_constraintTop_toBottomOf="@+id/text_user_fullName" />

        <TextView
            android:id="@+id/text_posting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/text_posting"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <TextView
            android:id="@+id/text_user_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number"
            app:layout_constraintEnd_toEndOf="@+id/text_posting"
            app:layout_constraintStart_toStartOf="@+id/text_posting"
            app:layout_constraintTop_toBottomOf="@+id/text_posting" />

        <TextView
            android:id="@+id/text_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_favorite"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@+id/divider" />

        <TextView
            android:id="@+id/text_user_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_number"
            app:layout_constraintEnd_toEndOf="@+id/text_favorite"
            app:layout_constraintStart_toStartOf="@+id/text_favorite"
            app:layout_constraintTop_toBottomOf="@+id/text_favorite" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>